--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,23 @@
             android:name=".MainActivity"
             android:exported="true"
             android:screenOrientation="landscape">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".PocketSolar"
+            android:theme="@style/Theme.ArProject"
+            android:screenOrientation="landscape"
+
+            >
+
+
+
+        </activity>
+
         <meta-data android:name="com.google.ar.core" android:value="required"/>
     </application>
 
