--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.ar:core:1.30.0'
+    implementation 'me.relex:circleindicator:2.1.6'
+    implementation 'com.google.ar:core:1.31.0'
     implementation 'de.javagl:obj:0.3.0'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
