--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,9 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            >
+
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,8 +28,9 @@
             android:name=".PocketSolar"
             android:theme="@style/Theme.ArProject"
             android:screenOrientation="landscape"
+           >
 
-            >
+
 
 
 
